...

    @Serializable
    @SerialName("project_route")
    data object ProjectRoute : Route, NavKey {

        @Serializable
        @SerialName("project_overview")
        data object ProjectOverview : Route, NavKey

        @Serializable
        @SerialName("project_archive")
        data object ProjectArchive : Route, NavKey

...
